vlib/v/checker/tests/map_init_invalid_update.out
vlib/v/checker/tests/map_init_invalid_update.vv:8:6: error: invalid map update: non-map type
    6 |     foo := 'foo is a string'
    7 |     a := {
    8 |         ...foo // not a map
      |            ~~~
    9 |         'a': 5
   10 |         'b': 6
vlib/v/checker/tests/map_init_invalid_update.vv:19:6: error: invalid map update: non-map type
   17 |     println(b)
   18 |     c := {
   19 |         ...Foo{9} // also not ok
      |            ~~~~~~
   20 |     }
   21 |     println(c)
